# egg-group-helper

./: .gitignore  README.md  cmd.txt  index.html  missing_physique_fill_template.txt  package-lock.json  package.json  package_portable_release.ps1  portable_user_data.template.json
public/rocom_data/: README.md  rocom_egg_groups.json  rocom_entry_images_manifest.json  rocom_special_traits.json
scripts/: fix_355_356.mjs  resequence_356.mjs  sync_pokedex_data.mjs
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: ConfigEditor.tsx  PetCard.tsx  SearchPicker.tsx
src/lib/: app-context.tsx  constants.ts  data.ts  logic.ts  portable.ts  storage.ts  types.ts
src/styles/: app.css
