[package]
name = "egg-group-helper"
version = "0.1.0"
description = "蛋种助手"
authors = ["Contributors"]
edition = "2021"

[lib]
name = "egg_group_helper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
